force-app/main/default/objects/Seminar__c/fields/Final_Invoice_description__c.field-meta.xml
<CustomField>
    <fullName>Final_Invoice_description__c</fullName>
    <formula>IF(CONTAINS(Name, &apos;Deposit&apos;) , &apos;Less Deposit - Study Skills&apos;,

Name &amp; &apos; - &apos; &amp; Year_Levels_selected__c &amp; &apos; &apos; &amp; TEXT(DAY( DATEVALUE(Start_Date_Time__c ) ))+&quot;/&quot; +TEXT(MONTH(DATEVALUE(Start_Date_Time__c ) ))+&quot;/&quot; +TEXT(YEAR(DATEVALUE(Start_Date_Time__c ) ))&amp;&quot; - &quot;&amp; Booking__r.Contact_Name__r.FirstName +&quot; &quot;+ Booking__r.Contact_Name__r.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Invoice description</label>
    <type>Text</type>
</CustomField>