force-app/main/default/objects/Seminar__c/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <description>Used in all delivery and revenue reports</description>
    <formula>IF(

OR(ISPICKVAL(Product__r.Family,&quot;Seminar&quot;), ISPICKVAL(Product__r.Family,&quot;Elevate Online&quot;), ISPICKVAL(Product__r.Family,&quot;Webinar&quot;),ISPICKVAL(Product__r.Family,&quot;Misc&quot;)),&quot;Study Skills&quot;,
TEXT(Product__r.Family)
)</formula>
    <label>Product Line</label>
    <type>Text</type>
</CustomField>