force-app/main/default/objects/Seminar__c/fields/Xero_Account__c.field-meta.xml
<CustomField>
    <fullName>Xero_Account__c</fullName>
    <formula>IF(CONTAINS(Name, &apos;Manual&apos;) , &apos;4200001 - Manual Revenue&apos;,
IF(CONTAINS(Name, &apos;Travel Fee&apos;) , &apos;4002001 - Travel Revenue&apos;,
IF(CONTAINS(Name, &apos;Travel&apos;) , &apos;4002001 - Travel Revenue&apos;,
IF(CONTAINS(Name, &apos;Deposit&apos;) , &apos;2004001 - Deposits Taken&apos;,
IF( Product_Line__c &lt;&gt; &apos;PBL&apos; , &apos;4001001 - Seminar Revenue&apos;,
IF( AND(Product_Line__c = &apos;PBL&apos;, Product_Type_2__c = &apos;Presenter Led&apos;) , &apos;4100250 - STEM PBL Teacher Training&apos;,
IF( AND(Product_Line__c = &apos;PBL&apos;, Product_Type_2__c &lt;&gt; &apos;Presenter Led&apos;) , &apos;4100200 - STEM PBL Revenue&apos;,
&apos;0&apos;)))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Xero Account</label>
    <type>Text</type>
</CustomField>