force-app/main/default/objects/Seminar__c/fields/Year_Level__c.field-meta.xml
<CustomField>
    <fullName>Year_Level__c</fullName>
    <description>WDCi: To track year for seminar</description>
    <label>Year Level</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>11</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>13</fullName>
            </value>
            <value>
                <fullName>Year 1</fullName>
            </value>
            <value>
                <fullName>Year 2</fullName>
            </value>
            <value>
                <fullName>Year 3</fullName>
            </value>
            <value>
                <fullName>Year 4</fullName>
            </value>
            <value>
                <fullName>Postgraduate</fullName>
            </value>
            <value>
                <fullName>Primary 4</fullName>
            </value>
            <value>
                <fullName>Primary 5</fullName>
            </value>
            <value>
                <fullName>Primary 6</fullName>
            </value>
            <value>
                <fullName>Secondary 1</fullName>
            </value>
            <value>
                <fullName>Secondary 1E</fullName>
            </value>
            <value>
                <fullName>Secondary 1NA</fullName>
            </value>
            <value>
                <fullName>Secondary 1NT</fullName>
            </value>
            <value>
                <fullName>Secondary 1NA &amp; NT</fullName>
            </value>
            <value>
                <fullName>Secondary 2</fullName>
            </value>
            <value>
                <fullName>Secondary 2E</fullName>
            </value>
            <value>
                <fullName>Secondary 2NA</fullName>
            </value>
            <value>
                <fullName>Secondary 2NT</fullName>
            </value>
            <value>
                <fullName>Secondary 2NA &amp; NT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>